--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
       </div>
     </nav>
   </header>
+
   <div class="top-wrapper">
     <h1><span>新しい時代</span>の<br>車の見つけ方</h1>
     <h2><i class="fas fa-wave-square"></i>車選びは検索型から  マッチング型へ<i class="fas fa-wave-square"></i></h2>
     <a href="#second"><span></span>Scroll</a>
   </div>
   <div id="second"></div>
+
   <div class="second-wrapper">
     <div class="title">
       <h1>事業について</h1>
@@ -76,7 +78,61 @@
     </p>
     <p>愛知県を中心に勢力拡大中</p>
   </div>
+  
+  <div class="svg">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f1f3f3" fill-opacity="1" d="M0,160L40,144C80,128,160,96,240,101.3C320,107,400,149,480,186.7C560,224,640,256,720,272C800,288,880,288,960,256C1040,224,1120,160,1200,133.3C1280,107,1360,117,1400,122.7L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
   </div>
+
+  <!-- <div class="principle">
+    <h1>中古車業界に<br>パラダイムシフトを起こす</h1>
+    <img src="pic/pri.png" alt="">
+  </div> -->
+  <!-- This is just for fun lol I made the road!!-->
+  <!-- <div class="a-c">
+    <p class="asph">ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
+      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
+      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
+      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
+      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
+      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
+      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　</p>
+    <div class="road">
+      <p>
+        <img src="pic/car.png" alt="car">
+      </p>
+      <p>
+        <img src="pic/car2.png" alt="車">
+      </p>
+      <p>
+        <img src="pic/car3.png" alt="中古車">
+      </p>
+      <p>
+        <img src="pic/car4.png" alt="認定中古車">
+      </p>
+      <p>
+        <img src="pic/car5.png" alt="スポーツカー">
+      </p>
+      <p>
+        <img class="object" src="pic/car6.png" alt="トラック">
+      </p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+  </div> -->
+  <div class="recommend">
+    <img src="pic/bymycar.png" alt="">
+    <h2>自分らしさを求めて車選びをする人々が増えています。</h2>
+    <h2>AIによるマッチングで自分らしい車選びを。</h2>
+    <img src="pic/goal.png" alt="">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3991C8" fill-opacity="1" d="M0,96L40,85.3C80,75,160,53,240,37.3C320,21,400,11,480,42.7C560,75,640,149,720,149.3C800,149,880,75,960,85.3C1040,96,1120,192,1200,208C1280,224,1360,160,1400,128L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
+  </div>
+
   <div class="a">
 
   </div>
