--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="top-wrapper">
     <h1><span>新しい時代</span>の<br>車の見つけ方</h1>
     <h2><i class="fas fa-wave-square"></i>車選びは検索型から  マッチング型へ<i class="fas fa-wave-square"></i></h2>
-    <a href="#second"><span></span>Scroll</a>
+    <a href="#second"><span></span>Next</a>
   </div>
   <div id="second"></div>
 
@@ -78,61 +78,92 @@
     </p>
     <p>愛知県を中心に勢力拡大中</p>
   </div>
-  
+
   <div class="svg">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f1f3f3" fill-opacity="1" d="M0,160L40,144C80,128,160,96,240,101.3C320,107,400,149,480,186.7C560,224,640,256,720,272C800,288,880,288,960,256C1040,224,1120,160,1200,133.3C1280,107,1360,117,1400,122.7L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
   </div>
 
-  <!-- <div class="principle">
-    <h1>中古車業界に<br>パラダイムシフトを起こす</h1>
-    <img src="pic/pri.png" alt="">
-  </div> -->
-  <!-- This is just for fun lol I made the road!!-->
-  <!-- <div class="a-c">
-    <p class="asph">ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
-      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
-      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
-      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
-      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
-      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　
-      ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　ー　</p>
-    <div class="road">
-      <p>
-        <img src="pic/car.png" alt="car">
-      </p>
-      <p>
-        <img src="pic/car2.png" alt="車">
-      </p>
-      <p>
-        <img src="pic/car3.png" alt="中古車">
-      </p>
-      <p>
-        <img src="pic/car4.png" alt="認定中古車">
-      </p>
-      <p>
-        <img src="pic/car5.png" alt="スポーツカー">
-      </p>
-      <p>
-        <img class="object" src="pic/car6.png" alt="トラック">
-      </p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-  </div> -->
   <div class="recommend">
     <img src="pic/bymycar.png" alt="">
-    <h2>自分らしさを求めて車選びをする人々が増えています。</h2>
-    <h2>AIによるマッチングで自分らしい車選びを。</h2>
+    <h2><span>自分らしさ</span>を求めて<br>車選びをする人々が<br>増えています。</h2>
+    <h2><span>AIによるマッチング</span>で<br>自分らしい車選びを。</h2>
     <img src="pic/goal.png" alt="">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3991C8" fill-opacity="1" d="M0,96L40,85.3C80,75,160,53,240,37.3C320,21,400,11,480,42.7C560,75,640,149,720,149.3C800,149,880,75,960,85.3C1040,96,1120,192,1200,208C1280,224,1360,160,1400,128L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
   </div>
 
+  <div class="svg before-ponto">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L24,85.3C48,107,96,149,144,176C192,203,240,213,288,213.3C336,213,384,203,432,218.7C480,235,528,277,576,245.3C624,213,672,107,720,58.7C768,11,816,21,864,42.7C912,64,960,96,1008,101.3C1056,107,1104,85,1152,69.3C1200,53,1248,43,1296,69.3C1344,96,1392,160,1416,192L1440,224L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg>
+  </div>
+
+  <div class="ponto">
+    <h2>PONTOで実現できること</h2>
+    <div class="inner">
+      <div class="content">
+        <video src="pic/video1.mp4" loop autoplay muted playsinline></video>
+        <h3>AIによるマッチング</h3>
+        <p>最先端の人工頭脳（AI）によるマッチングにより、お客様に適合したベストな選択肢を提案します。</p>
+      </div>
+      <div class="content">
+        <video src="pic/video2.mp4" loop autoplay muted playsinline></video>
+        <h3>知らない車に出会える</h3>
+        <p>お客様の条件に合った車を提案させていただくため、未知かつ魅力的な出会いを提供します。</p>
+      </div>
+      <div class="content">
+        <video src="pic/video3.mp4" loop autoplay muted playsinline></video>
+        <h3>自分にあった車が見つかる</h3>
+        <p>弊社が掲載する日本中の車の中からお客様の選んだ条件にマッチした車を探し出すことができます。</p>
+      </div>
+      <div class="content">
+        <video src="pic/video4.mp4" loop autoplay muted playsinline></video>
+        <h3>質の良い車を探せる</h3>
+        <p>弊社が選び出した数多くの質の良い車の中からユーザーの皆様に提案させて頂きます。</p>
+      </div>
+    </div>
+  </div>
+  <div class="before-twitter">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#bce0f7" fill-opacity="1" d="M0,320L0,224L84.7,224L84.7,224L169.4,224L169.4,96L254.1,96L254.1,224L338.8,224L338.8,320L423.5,320L423.5,192L508.2,192L508.2,128L592.9,128L592.9,128L677.6,128L677.6,192L762.4,192L762.4,256L847.1,256L847.1,224L931.8,224L931.8,96L1016.5,96L1016.5,256L1101.2,256L1101.2,256L1185.9,256L1185.9,96L1270.6,96L1270.6,96L1355.3,96L1355.3,256L1440,256L1440,0L1355.3,0L1355.3,0L1270.6,0L1270.6,0L1185.9,0L1185.9,0L1101.2,0L1101.2,0L1016.5,0L1016.5,0L931.8,0L931.8,0L847.1,0L847.1,0L762.4,0L762.4,0L677.6,0L677.6,0L592.9,0L592.9,0L508.2,0L508.2,0L423.5,0L423.5,0L338.8,0L338.8,0L254.1,0L254.1,0L169.4,0L169.4,0L84.7,0L84.7,0L0,0L0,0Z"></path></svg>
+  </div>
+  <div class="twitter">
+
+  </div>
+  <div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill=" #1DA1F2" fill-opacity="1" d="M0,288L0,128L84.7,128L84.7,192L169.4,192L169.4,96L254.1,96L254.1,64L338.8,64L338.8,32L423.5,32L423.5,0L508.2,0L508.2,224L592.9,224L592.9,160L677.6,160L677.6,192L762.4,192L762.4,0L847.1,0L847.1,128L931.8,128L931.8,224L1016.5,224L1016.5,256L1101.2,256L1101.2,160L1185.9,160L1185.9,32L1270.6,32L1270.6,32L1355.3,32L1355.3,192L1440,192L1440,0L1355.3,0L1355.3,0L1270.6,0L1270.6,0L1185.9,0L1185.9,0L1101.2,0L1101.2,0L1016.5,0L1016.5,0L931.8,0L931.8,0L847.1,0L847.1,0L762.4,0L762.4,0L677.6,0L677.6,0L592.9,0L592.9,0L508.2,0L508.2,0L423.5,0L423.5,0L338.8,0L338.8,0L254.1,0L254.1,0L169.4,0L169.4,0L84.7,0L84.7,0L0,0L0,0Z"></path></svg>
+  </div>
+  <div class="topic">
+    <div class="topic-title">
+      <p>Topic</p>
+      <p>中古自動車業界に関する記事</p>
+    </div>
+    <div class="articles">
+      <a href="">
+        <img src="pic/article1.png" alt="">
+        <div class="tag">
+          <p><span>01</span>認定中古車</p>
+          <p>2020年8月8日</p>
+        </div>
+        <p class="text">認定中古車とは？メリットデメリットと主要メーカーの保証内容を紹介</p>
+      </a>
+      <a href="">
+        <img src="pic/article2.png" alt="">
+        <div class="tag">
+          <p><span>02</span>認定中古車</p>
+          <p>2020年8月10日</p>
+        </div>
+        <p class="text">認定中古車は値引き可能？交渉のコツと安く買う方法を紹介</p>
+      </a>
+      <a href="">
+        <img src="pic/article3.png" alt="">
+        <div class="tag">
+          <p><span>05</span>認定中古車</p>
+          <p>2020年8月24日</p>
+        </div>
+        <p class="text">失敗しない買い方！認定中古車を選ぶ際の5つの注意点を紹介</p>
+      </a>
+    </div>
+    <div class="topic-btn">
+      <a href="" alt="記事一覧">記事一覧</a>
+    </div>
+  </div>
+  
   <div class="a">
 
   </div>
