--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </div>
     </div>
   </div>
-  <header>
+  <header id="top-jump">
     <img src="pic/logo.png" alt="PERANTO">
     <h1>株式会社PERANTO</h1>
-    <a href="https://ryow1003.github.io/peranto-co/">企業様へ</a>
-    <a href="https://ryow1003.github.io/peranto-article/">関連記事</a>
+    <a href="https://peranto.info/co/">企業様へ</a>
+    <a href="https://peranto.info/article/">関連記事</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdr7Us1eM8Jx-a84vFyuso4s5kKb7QjMiOSazr6plJBaqO1ig/viewform">お問い合わせ</a>
     <!-- モバイルメニュー -->
     <button id="btn-menu">
@@ -47,9 +47,9 @@
     <nav id="sp-menu">
       <div id="sp-menu-position">
         <ul class="sp-menu-list">
-          <li class="col"><a href="https://ryow1003.github.io/peranto-co/">企業様</a></li>
-          <li class="col"><a href="https://ryow1003.github.io/PONTO/">PONTO</a></li>
-          <li class="col"><a href="https://ryow1003.github.io/peranto-article/">関連記事</a></li>
+          <li class="col"><a href="https://peranto.info/co/">企業様</a></li>
+          <li class="col"><a href="https://www.peranto.jp/">PONTO</a></li>
+          <li class="col"><a href="https://peranto.info/article/">関連記事</a></li>
           <li class="col"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdr7Us1eM8Jx-a84vFyuso4s5kKb7QjMiOSazr6plJBaqO1ig/viewform">お問い合わせ</a></li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
     <p>弊社では <span class="match">人と車のマッチング</span>をコンセプトに事業を展開しています。</p>
     <p class="exp">通常の中古車だけでなく、認定中古車も取り扱っており、2020年8月時点ではWebアプリ
       <br />
-      <a class="p-button" href="">
+      <a class="p-button" href="https://www.peranto.jp/">
         <span>PONTOへ</span>
         <span>PONTO <i class="fas fa-angle-double-right"></i></span>
       </a>
@@ -118,23 +118,22 @@
         <p>弊社が選び出した数多くの質の良い車の中からユーザーの皆様に提案させて頂きます。</p>
       </div>
     </div>
+    <div class="invite">
+      <a href="https://www.peranto.jp/">PONTOへ</a>
+    </div>
   </div>
-  <div class="before-twitter">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#bce0f7" fill-opacity="1" d="M0,320L0,224L84.7,224L84.7,224L169.4,224L169.4,96L254.1,96L254.1,224L338.8,224L338.8,320L423.5,320L423.5,192L508.2,192L508.2,128L592.9,128L592.9,128L677.6,128L677.6,192L762.4,192L762.4,256L847.1,256L847.1,224L931.8,224L931.8,96L1016.5,96L1016.5,256L1101.2,256L1101.2,256L1185.9,256L1185.9,96L1270.6,96L1270.6,96L1355.3,96L1355.3,256L1440,256L1440,0L1355.3,0L1355.3,0L1270.6,0L1270.6,0L1185.9,0L1185.9,0L1101.2,0L1101.2,0L1016.5,0L1016.5,0L931.8,0L931.8,0L847.1,0L847.1,0L762.4,0L762.4,0L677.6,0L677.6,0L592.9,0L592.9,0L508.2,0L508.2,0L423.5,0L423.5,0L338.8,0L338.8,0L254.1,0L254.1,0L169.4,0L169.4,0L84.7,0L84.7,0L0,0L0,0Z"></path></svg>
-  </div>
-  <div class="twitter">
 
-  </div>
   <div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill=" #1DA1F2" fill-opacity="1" d="M0,288L0,128L84.7,128L84.7,192L169.4,192L169.4,96L254.1,96L254.1,64L338.8,64L338.8,32L423.5,32L423.5,0L508.2,0L508.2,224L592.9,224L592.9,160L677.6,160L677.6,192L762.4,192L762.4,0L847.1,0L847.1,128L931.8,128L931.8,224L1016.5,224L1016.5,256L1101.2,256L1101.2,160L1185.9,160L1185.9,32L1270.6,32L1270.6,32L1355.3,32L1355.3,192L1440,192L1440,0L1355.3,0L1355.3,0L1270.6,0L1270.6,0L1185.9,0L1185.9,0L1101.2,0L1101.2,0L1016.5,0L1016.5,0L931.8,0L931.8,0L847.1,0L847.1,0L762.4,0L762.4,0L677.6,0L677.6,0L592.9,0L592.9,0L508.2,0L508.2,0L423.5,0L423.5,0L338.8,0L338.8,0L254.1,0L254.1,0L169.4,0L169.4,0L84.7,0L84.7,0L0,0L0,0Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#bce0f7" fill-opacity="1" d="M0,64L0,64L180,64L180,192L360,192L360,256L540,256L540,32L720,32L720,64L900,64L900,224L1080,224L1080,160L1260,160L1260,160L1440,160L1440,0L1260,0L1260,0L1080,0L1080,0L900,0L900,0L720,0L720,0L540,0L540,0L360,0L360,0L180,0L180,0L0,0L0,0Z"></path></svg>
   </div>
+
   <div class="topic">
     <div class="topic-title">
       <p>Topic</p>
       <p>中古自動車業界に関する記事</p>
     </div>
     <div class="articles">
-      <a href="">
+      <a href="https://peranto.info/article/1">
         <img src="pic/article1.png" alt="">
         <div class="tag">
           <p><span>01</span>認定中古車</p>
@@ -142,7 +141,7 @@
         </div>
         <p class="text">認定中古車とは？メリットデメリットと主要メーカーの保証内容を紹介</p>
       </a>
-      <a href="">
+      <a href="https://peranto.info/article/2">
         <img src="pic/article2.png" alt="">
         <div class="tag">
           <p><span>02</span>認定中古車</p>
@@ -150,8 +149,8 @@
         </div>
         <p class="text">認定中古車は値引き可能？交渉のコツと安く買う方法を紹介</p>
       </a>
-      <a href="">
-        <img src="pic/article3.png" alt="">
+      <a href="https://peranto.info/article/5">
+        <img src="pic/article5.png" alt="">
         <div class="tag">
           <p><span>05</span>認定中古車</p>
           <p>2020年8月24日</p>
@@ -160,12 +159,30 @@
       </a>
     </div>
     <div class="topic-btn">
-      <a href="" alt="記事一覧">記事一覧</a>
+      <a href="https://peranto.info/article/" alt="記事一覧">記事一覧</a>
     </div>
   </div>
-  
-  <div class="a">
 
+  <div class="svg">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f1f3f3" fill-opacity="1" d="M0,0L0,96L36.9,96L36.9,0L73.8,0L73.8,256L110.8,256L110.8,320L147.7,320L147.7,32L184.6,32L184.6,96L221.5,96L221.5,160L258.5,160L258.5,288L295.4,288L295.4,96L332.3,96L332.3,256L369.2,256L369.2,320L406.2,320L406.2,320L443.1,320L443.1,160L480,160L480,96L516.9,96L516.9,288L553.8,288L553.8,160L590.8,160L590.8,256L627.7,256L627.7,128L664.6,128L664.6,128L701.5,128L701.5,256L738.5,256L738.5,96L775.4,96L775.4,96L812.3,96L812.3,64L849.2,64L849.2,288L886.2,288L886.2,192L923.1,192L923.1,288L960,288L960,32L996.9,32L996.9,288L1033.8,288L1033.8,32L1070.8,32L1070.8,128L1107.7,128L1107.7,64L1144.6,64L1144.6,224L1181.5,224L1181.5,32L1218.5,32L1218.5,160L1255.4,160L1255.4,256L1292.3,256L1292.3,256L1329.2,256L1329.2,288L1366.2,288L1366.2,224L1403.1,224L1403.1,128L1440,128L1440,0L1403.1,0L1403.1,0L1366.2,0L1366.2,0L1329.2,0L1329.2,0L1292.3,0L1292.3,0L1255.4,0L1255.4,0L1218.5,0L1218.5,0L1181.5,0L1181.5,0L1144.6,0L1144.6,0L1107.7,0L1107.7,0L1070.8,0L1070.8,0L1033.8,0L1033.8,0L996.9,0L996.9,0L960,0L960,0L923.1,0L923.1,0L886.2,0L886.2,0L849.2,0L849.2,0L812.3,0L812.3,0L775.4,0L775.4,0L738.5,0L738.5,0L701.5,0L701.5,0L664.6,0L664.6,0L627.7,0L627.7,0L590.8,0L590.8,0L553.8,0L553.8,0L516.9,0L516.9,0L480,0L480,0L443.1,0L443.1,0L406.2,0L406.2,0L369.2,0L369.2,0L332.3,0L332.3,0L295.4,0L295.4,0L258.5,0L258.5,0L221.5,0L221.5,0L184.6,0L184.6,0L147.7,0L147.7,0L110.8,0L110.8,0L73.8,0L73.8,0L36.9,0L36.9,0L0,0L0,0Z"></path></svg>
   </div>
+
+  <footer>
+    <img src="pic/logo.png" alt="">
+    <h2>PERANTO.inc</h2>
+    <div class="sns">
+      <a href="https://twitter.com/PerantoOfficial?s=21"><i class="fab fa-twitter"></i></a>
+      <a href="https://instagram.com/peranto_official?igshid=1fupj9awthco5"><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="row">
+      <a href="#top-jump">TOPへ</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdr7Us1eM8Jx-a84vFyuso4s5kKb7QjMiOSazr6plJBaqO1ig/viewform">お問い合わせ</a>
+      <a href="https://peranto.info/co/">企業様へ</a>
+      <a href="https://www.peranto.jp/">PONTOへ</a>
+    </div>
+    <div class="copyright">
+      <p>©copyright.PERANT.inc</p>
+    </div>
+  </footer>
 </body>
 </html>
