--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1>事業について</h1>
     </div>
     <p>弊社では <span class="match">人と車のマッチング</span>をコンセプトに事業を展開しています。</p>
-    <p class="exp">通常の中古車だけでなく、認定中古車も取り扱っており、2020年8月時点ではWebアプリ
+    <p>通常の中古車だけでなく、認定中古車も取り扱っており、2020年8月時点ではWebアプリ
       <br />
       <a class="p-button" href="https://www.peranto.jp/">
         <span>PONTOへ</span>
@@ -85,9 +85,10 @@
 
   <div class="recommend">
     <img src="pic/bymycar.png" alt="">
-    <h2><span>自分らしさ</span>を求めて<br>車選びをする人々が<br>増えています。</h2>
-    <h2><span>AIによるマッチング</span>で<br>自分らしい車選びを。</h2>
-    <img src="pic/goal.png" alt="">
+    <p><span>自分らしさ</span>を求めて<br>車選びをする人々が<br>増えています。</p>
+    <img src="pic/goal.png" alt="" class="order2">
+    <p><span>AIによるマッチング</span>で<br>自分らしい車選びを。</p>
+    <img src="pic/goal.png" alt="" class="order4">
   </div>
 
   <div class="svg before-ponto">
@@ -175,10 +176,10 @@
       <a href="https://instagram.com/peranto_official?igshid=1fupj9awthco5"><i class="fab fa-instagram"></i></a>
     </div>
     <div class="row">
-      <a href="#top-jump">TOPへ</a>
+      <a href="https://www.peranto.jp/">PONTOへ</a>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSdr7Us1eM8Jx-a84vFyuso4s5kKb7QjMiOSazr6plJBaqO1ig/viewform">お問い合わせ</a>
       <a href="https://peranto.info/co/">企業様へ</a>
-      <a href="https://www.peranto.jp/">PONTOへ</a>
+      <a href="#top-jump">TOPへ</a>
     </div>
     <div class="copyright">
       <p>©copyright.PERANT.inc</p>
