--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="author" content="RyoNakano">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=2.0">
   <meta name="keywords" content="">
+  <meta name="theme-color" content="#3991C8">
   <title>PERANTO.inc</title>
   <meta name="description" content="">
+  <link rel="icon" href="/favicon.ico">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="stylesheet" href="responsive.css">
+  <link rel="apple-touch-icon" href="pic/logo.png">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
